Fixed scrollbar appearing unnecessarily on landing page

--- a/src/app/submitted/submitted.component.css
+++ b/src/app/submitted/submitted.component.css
@@ -1,3 +1,10 @@
+html {
+  min-height: 100%;
+}
+body {
+  height: 100vh;
+}
+
 .thank-you-text {
   width: 100vw;
   font-size: 3em;
